<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2017 Avuton Olrich
  ~ Copyright (c) 2015 Daniel Barnett
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <EditText
        android:id="@+id/address_form"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/address_block_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:selectAllOnFocus="true"/>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/gps_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_header_size"
        android:visibility="invisible"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gps_coordinates"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/navigate_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/navigate_button"
            android:onClick="mapListener"
            android:src="@drawable/ic_map_black_24dp"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/navigate_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            android:onClick="shareListener"
            android:src="@drawable/ic_share_black_24dp"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/navigate_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contact"
            android:onClick="navigateContact"
            android:src="@drawable/ic_perm_contact_calendar_black_24dp"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/navigate_phone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/phone"
            android:onClick="navigatePhone"
            android:src="@drawable/ic_phone_black_24dp"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear"
            android:onClick="clearButton"
            android:src="@drawable/ic_clear_black_24dp"
            android:visibility="gone"/>
    </TableRow>
</RelativeLayout>